--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
   </head>
   <body>
+
     <canvas class="webgl"></canvas>
+    <nav>
+      <a href="/">sphere</a>
+      <ul>
+        <li>expolre</li>
+        <li>create</li>
+      </ul>
+    </nav>
+    <h1 class="title">give to spin</h1>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
